# grant-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yml  weekly-crawl.yml
src/grant_tracker/: cli.py  db.py  detail_fetcher.py  enrichment.py  models.py  url_resolver.py
src/grant_tracker/crawlers/: base.py  benefits_finder.py  ckan.py  esdc.py
src/grant_tracker/web/: app.py  deps.py  routes.py
src/grant_tracker/web/templates/: 404.html  base.html  discover.html  discover_results.html  grant.html  grants.html  home.html
src/grant_tracker/web/templates/partials/: grant_card.html  grant_list.html
