[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grant-tracker"
version = "0.1.0"
description = "Crawl and aggregate Canadian government grant data for not-for-profit organizations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "pydantic>=2.0",
    "click>=8.1",
    "structlog>=24.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
grant-tracker = "grant_tracker.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
